--- a/css/buycar.css
+++ b/css/buycar.css
@@ -224,3 +224,66 @@ html,body{
 .car_bottom_right .total_number{
     color: #f60;
 }
+
+/* 添加进入购物车的商品列表样式 */
+.car_item{
+    height: 120px;
+    border-top: solid 1px #ccc;
+    padding: 0 20px;
+    padding-top: 20px;
+}
+.car_item li{
+    float: left;
+}
+.car_item .car_choose{
+    width: 14px;
+    height: 14px;
+    border: solid 1px #ccc;
+    margin-right: 20px;
+}
+.car_item li:nth-of-type(7) p{
+    line-height: 18px;
+}
+.car_item li:nth-of-type(6){
+    width: 160px;
+    color: #f60;
+}
+.car_item li:nth-of-type(5){
+    width: 160px;
+}
+.car_item li:nth-of-type(5) input{
+    width: 34px;
+    height: 22px;
+    border: solid 1px #d6d6d6;
+    outline: none;
+    text-align: center;
+}
+.car_item li:nth-of-type(5) .iconfont{
+    font-size: 10px;
+    cursor: pointer;
+    padding: 5px;
+    border: solid 1px #d6d6d6;
+}
+.car_item li:nth-of-type(4){
+    width: 160px;
+    font-weight: bolder;
+}
+.car_item li:nth-of-type(3){
+    width: 160px;
+}
+.car_item li:nth-of-type(3) p{
+    line-height: 18px;
+}
+.car_item li:nth-of-type(2) img{
+    width: 78px;
+    height: 78px;
+    border:solid 1px #eee;
+    float: left;
+    margin-right: 10px;
+}
+.car_item li:nth-of-type(2) a{
+    display: block;
+    width: 225px;
+    float: left;
+    padding-right: 90px;
+}
