--- a/css/detial.css
+++ b/css/detial.css
@@ -79,6 +79,49 @@ a:hover{
 .header ol span{
     color: white;
 }
+.header .car_login{
+    text-align: center;
+    width: 360px;
+    padding: 20px 0;
+    line-height: 44px;
+    background: white;
+    position: absolute;
+    right: 86px;
+    top: 44px;
+    z-index: 5;
+    font-size: 12px;
+    display: none;
+}
+.header .car_login a{
+    color: #0092d8;
+}
+.header .appscan{
+    position: absolute;
+    top: 44px;
+    right: 86px;
+    z-index: 4;
+    display: none;
+}
+.header_seach{
+    width: 240px;
+    position: absolute;
+    top: 0;
+    right: 216px;
+    height: 44px;
+    line-height: 44px;
+    background: white;
+    padding-left: 10px;
+    display: none;
+}
+.header_seach input{
+    border: none;
+    outline: none;
+    margin-left: 10px;
+}
+.header_seach .icon-serch{
+    cursor: pointer;
+    color: #666;
+}
 /* ================公告样式================ */
 .announce{
     text-align: center;
@@ -111,6 +154,25 @@ a:hover{
 .product_left .showImg{
     width: 500px;
     height: 500px;
+    margin-right: 95px;
+    position: relative;
+}
+.showImg img{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.showImg .showcase{
+    width: 200px;
+    height: 200px;
+    background: #0080dc;
+    opacity: 0.2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
 }
 .product_left .product_list{
     margin-top: 30px;
@@ -125,9 +187,25 @@ a:hover{
     background: white;
     opacity: 0.4;
 }
-.product_left .product_list li:hover{
+.product_left .product_list .product_list_checked{
     border-color: red;
     opacity: 1;
+}
+.showBigImg{
+    width: 400px;
+    height: 400px;
+    overflow: hidden;
+    position: absolute;
+    top: 120px;
+    left: 600px;
+    display: none;
+}
+.showBigImg img{
+    width: 1000px;
+    height: 1000px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .product_left .product_list li img{
     width: 60px;
@@ -294,6 +372,23 @@ a:hover{
     margin-bottom: 15px;
     overflow: hidden;
 }
+.product_right .sku_num input{
+    width: 38px;
+    height: 28px;
+    border: solid 1px #d6d6d6;
+    outline: none;
+    text-align: center;
+    float: left;
+    border-left: 0;
+    border-right: 0;
+}
+.product_right .sku_num i{
+    font-size: 10px;
+    cursor: pointer;
+    padding: 7px;
+    float: left;
+    border: solid 1px #d6d6d6;
+}
 .product_right .sku_address{
     margin-bottom: 15px;
     overflow: hidden;
@@ -336,7 +431,11 @@ a:hover{
     font-size: 12px;
     line-height: 18px;
 }
-
+.icon-right{
+    color: #0092d8;
+    position: relative;
+    top: 2px;
+}
 /* ============推荐商品样式============ */
 .main .recomment{
     width: 1190px;
@@ -470,6 +569,33 @@ a:hover{
     background: black;
     opacity: 0.7;
     width: 62px;
-    height: 63px;
+    height: 50px;
     border-bottom: solid 1px #5a5959;
+    text-align: center;
+    padding-top: 13px;
+    cursor: pointer;
+}
+.floating .iconfont{
+    color: white;
+    font-size: 20px;
+}
+.floating p{
+    color: white;
+    margin-top: 5px;
+}
+.floating .icon_hide{
+    display: none;
+    color: white;
+    width: 30px;
+    text-align: center;
+    margin-left: 15px; 
+}
+.floating li:hover .icon_hide{
+    display: block;
+}
+.floating li:hover .icon_dis{
+    display: none;
+}
+.floating li:hover{
+    opacity: 0.6;
 }
