--- a/css/buycar.css
+++ b/css/buycar.css
@@ -245,6 +245,10 @@ html,body{
 }
 .car_item li:nth-of-type(7) p{
     line-height: 18px;
+    cursor: pointer;
+}
+.car_item_box .btn_del{
+    cursor: pointer;
 }
 .car_item li:nth-of-type(6){
     width: 160px;
